@@ -339,3 +339,4 @@ Revision	Version Updated		Log Message
 316		C++			Tech Schools.
 317		C++			Deleted a bunch of old files.
 318		C++			Updated build.bat.
+319		C++			Tech schools now come from V2 install.
